--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -43,13 +43,14 @@ h5, .paragraphs{
   display: inline-block; 
   margin: none;
   padding-bottom: none;
+  padding-left: none;
   
 }
 
 .container2{
   display: flex;
   flex-direction: column;
-  flex:60%;
+  flex:40%;
 }
 
 #location{
